--- a/BaiTH1/src/main/webapp/css/bmi.css
+++ b/BaiTH1/src/main/webapp/css/bmi.css
@@ -3,6 +3,12 @@ body {
     margin: 40px;
 }
 
+.container {
+	width: 300px;
+    margin: 100px auto; 
+    text-align: center;
+}
+
 h2 {
     color: #2c3e50;
 }
